--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.5.1"
+koin = "4.0.0-RC1"
+koinAnnotations = "1.4.0-RC3"
 kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -44,6 +46,13 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junitJupiter" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref="koin" }
+koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref="koin" }
+koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref="koinAnnotations" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref="koin" }
+koin-test = { module = "io.insert-koin:koin-test", version.ref="koin" }
+koin-test-junit4 = { module = "io.insert-koin:koin-test-junit4", version.ref="koin" }
+koin-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref="koinAnnotations" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
